--- a/elements.html
+++ b/elements.html
@@ -1,9 +1,5 @@
 <!DOCTYPE HTML>
-<!--
-	Massively by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+
 <html>
 	<head>
 		<title>Speakers</title>
@@ -28,6 +24,7 @@
 							<li><a href="index.html">Home</a></li>
 							<li><a href="generic.html">About TEDx</a></li>
 							<li class="active"><a href="elements.html">Speakers</a></li>
+							<li><a href="gallery.html">Gallery</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
