--- a/gallery.html
+++ b/gallery.html
@@ -126,20 +126,19 @@
 								<h3>Email</h3>
 								<p><a href="#">info@untitled.tld</a></p>
 							</section>
-							<section>
-								<h3>Social</h3>
-								<ul class="icons alt">
-									<li><a href="#" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
-								</ul>
-							</section>
 						</section>
 					</footer>
 
 				<!-- Copyright -->
 					<div id="copyright">
+						
+							<ul class="split icons alt">
+								<li><a href="#" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
+								<li><a href="#" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
+								<li><a href="#" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
+							</ul>
+							<br>
+
 						<ul><li>&copy; Dexter.CO</li></ul>
 					</div>
 
